--- a/2signal.html
+++ b/2signal.html
@@ -17,6 +17,7 @@
                 <video controls loop><source src="Videos/VGiant.mp4"></video>
                 <video controls loop><source src="Videos/VHourglass.mp4"></video>
                 <video controls loop><source src="Videos/VQuantum.mp4"></video>
+                <button style="background-color: transparent; border-color: transparent;"><a href="https://youtu.be/YR_wIb_n4ZU"><h1 id="playtogether" style="background-color: black; color: white; font-size: 3em;">Play music together?</h1></a></button>
             </div>
         </div>
     </section>
