--- a/Giant's Deep.html
+++ b/Giant's Deep.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hourglass Twins</title>
+    <title>Giant's Deep</title>
     <link rel="stylesheet" href="InfoStyles.css">
     <style>
         #image {
@@ -19,7 +19,7 @@
     
 <div class="container">
     <img id="image" src="Images/Giant's Deep.png" alt="">
-    <h1 id="planetname">[Gian't Deep]</h1>
+    <h1 id="planetname">[Giant's Deep]</h1>
 </div>
 
 <div class="container1">
