--- a/Timberhearth.html
+++ b/Timberhearth.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hourglass Twins</title>
+    <title>Timber Hearth</title>
     <link rel="stylesheet" href="InfoStyles.css">
     <style>
         #image {
@@ -49,18 +49,18 @@
 <div class="container1">
     <ul class="images">
             <li>
-                <img id="imgyo" src="images2/fe1tnqff6tq51.jpg" alt="Ghost Matter">
+                <img id="imgyo" src="images2/timber1.webp" alt="Ghost Matter">
             </li>
             <li>
-                <img id="imgyo" src="images2/images.jpg" alt="Ghost Matter">
+                <img id="imgyo" src="images2/timber2.png" alt="Ghost Matter">
             </li>
     </ul>
     <ul class="images">
             <li>
-                <img id="imgyo" src="images2/Outer_Wilds_Ash_Twin_cover.avif" alt="Ghost Matter">
+                <img id="imgyo" src="images2/timber3.png" alt="Ghost Matter">
             </li>
             <li>
-                <img id="imgyo" src="images2/Outer_Wilds_Ember_Twin_Chert_s_Camp.avif" alt="Ghost Matter">
+                <img id="imgyo" src="images2/timber4.webp" alt="Ghost Matter">
             </li>
     </ul>
 </div>
